Fixed styling for input which has been overflow to the div

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+
 .navbar {
   display: flex;
   align-items: center;
@@ -74,9 +78,13 @@ code {
 }
 
 .task-item input.task-input {
-  border: none;
+  border: 1px solid transparent;
   width: 100%;
   padding:  5px;
+}
+
+.task-item input.task-input:focus {
+  border: 1px solid #86b7fe;
 }
 
 .todo-list-parent {
@@ -103,7 +111,6 @@ code {
 }
 
 .form-input .default-input {
-  margin-top: 10px;
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
@@ -154,13 +161,14 @@ code {
 .remove-task > a {
   padding: 4px;
   border-radius: 3px;
-  display: block;
+  display: flex;
+  align-items: center;
   text-decoration: none;
+  justify-content: space-around;
   background: #efefef;
   color: #000;
   width: 20px;
   height: 20px;
-  text-align: center;
   transition: all .3s;
 }
 
@@ -199,4 +207,10 @@ code {
   color: #fff;
   background-color: #5c636a;
   border-color: #565e64;
+}
+
+label.required:after {
+  content: '*';
+  margin-left: 6px;
+  color: red;
 }
